还原部分代码。